a pure starlight install

--- a/src/content/docs/generals/ground.mdx
+++ b/src/content/docs/generals/ground.mdx
@@ -4,15 +4,14 @@ author:
   - "Luke Schierer"
 sortOrder: 5
 ---
-{% banner type="info" %}
+:::note
 In the [Overview][], I explain my thinking.  This is a fairly long article, but
 contains a lot of useful background information if you want to understand how I
 arrived at these conclusions. If you just want to be told what to do, you can
-skip it and dive right in here. 
-{% /banner %}
+skip it and dive right in here.
 
-[Overview]: <overview.md>
-
+[Overview]: <overview>
+:::
 
 ### For Free to Play Players:
 
@@ -50,11 +49,11 @@ skill books between your two generals:
 * March Size
 * March Speed
 
-{% banner header="Specific General Notes" type="warning" %}
-Note that if you use Turenne, or Soult, you _**cannot**_ use the Ground Troop Attack skill book on *either* general.
-
-Note that if you use Alessandra, she _**must**_ have the March Size Increase Skill Book.
-{% /banner %}
+:::caution
+#### Specific General Notes
+* Note that if you use Turenne, or Soult, you _**cannot**_ use the Ground Troop Attack skill book on *either* general.
+* Note that if you use Alessandra, she _**must**_ have the March Size Increase Skill Book.
+:::
 
 
 ### For light spenders
