--- a/src/content/docs/generals/overview.mdx
+++ b/src/content/docs/generals/overview.mdx
@@ -1,8 +1,7 @@
 ---
 title: "Overview of Picking Generals"
-author: 
-   - "Luke Schierer"
-sortOrder: 1
+author: "Luke Schierer"
+template: 'doc'
 ---
 
 Knowing what generals to keep and what generals to get rid of is an important
