--- a/src/content/docs/generals/wall.mdx
+++ b/src/content/docs/generals/wall.mdx
@@ -5,12 +5,12 @@ author:
 sortOrder: 4
 ---
 
-{% banner type="info" %}
+:::note
 In the [Overview][], I explain my thinking.  This is a fairly long article, but
 contains a lot of useful background information if you want to understand how I
 arrived at these conclusions. If you just want to be told what to do, you can
 skip it and dive right in here. 
-{% /banner %}
+:::
 
 When you first start out, you ought to be [ghosting][] your troops whenever you
 might be attacked.  As a result, your Wall generals are not going to help you
@@ -47,12 +47,13 @@ march. You want to think about what is left when that is out attacking someone.
 If none of these describe you, then consider Ly Thuong Kiet, but you really
 ought to question if you are ready to engage in PvP yet.
 
-{% banner header="Event Participants" type="info" %}
+:::tip
+#### Event Participants
 If you see any of the following, they are superior choices for assistants available only as part of paid events:
 * Leo III (322) - specializes in siege troops
 * Lautaro (260) - specializes in ground troops with a secondary effect on mounted troops.
 * Yodo-dono (232) - specializes in ranged troops with a secondary generic boost to HP.
-{% /banner %}
+:::
 
 [^230107-2]: See [Evony Answers][]' article on [ascending][].
 
