--- a/src/content/docs/generals/peace_time_subcity_mayors.mdx
+++ b/src/content/docs/generals/peace_time_subcity_mayors.mdx
@@ -1,30 +1,33 @@
 ---
 title: "Peace Time Subcity Mayors"
-author: 
-  - "Luke Schierer"
-sortOrder: 10
+author: "Luke Schierer"
 ---
+
+import {CardGrid} from "@astrojs/starlight/components";
+import {Card} from "@astrojs/starlight/components";
 
 Periodically someone asks about Catherine II, or another of the peace time
 subcity mayors.  To answer this question, we need to compare the two following
 generals. 
 
-{% h_flex %}
-{% card heading="Catherine II" alt="Catherine II" img="/public/images/generals/Catherine_II.jpg" %}
-This instance of Catherine II has been only partially cultivated.
-* Leadership: +201
-* Attack: +119
-* Defense: +143
-* Politics: +214
-{% /card %}
-{% card heading="Harald" alt="Harald" img="/public/images/generals/Harald.jpg" %}
-This instance of Harald has been extensively cultivated.
-* Leadership: +500
-* Attack: +258
-* Defense: +284
-* Politics: +500
-{% /card %}
-{% /h_flex %}
+<CardGrid>
+    <Card title="Catherine II">
+    ![Catherine II](../../../assets/generals/Catherine_II.jpg)
+    This instance of Catherine II has been only partially cultivated.
+    * Leadership: +201
+    * Attack: +119
+    * Defense: +143
+    * Politics: +214
+    </Card>
+    <Card title="Harald">
+        ![Harald](../../../assets/generals/Harald.jpg)
+        This instance of Harald has been extensively cultivated.
+        * Leadership: +500
+        * Attack: +258
+        * Defense: +284
+        * Politics: +500
+    </Card>
+</CardGrid>
 
 Both mayors have been put on the same subcity in turn.  Mayor number 1,
 Catherine, results in an average training speed of +329.79% while mayor number
