--- a/src/content/docs/generals/siege.mdx
+++ b/src/content/docs/generals/siege.mdx
@@ -4,14 +4,14 @@ author:
   - "Luke Schierer"
 sortOrder: 7
 ---
-{% banner %}
+:::note
 In the [Overview][], I explain my thinking.  This is a fairly long article, but
 contains a lot of useful background information if you want to understand how I
 arrived at these conclusions. If you just want to be told what to do, you can
 skip it and dive right in here. 
 
 [Overview]: <overview>
-{% /banner %}
+:::
 Your Siege generals will be the *last* PvP generals you invest [rune stones][]
 and [BoA][] on.  This is because siege troops require gems to heal. 
 
