--- a/src/content/docs/generals/ranged.mdx
+++ b/src/content/docs/generals/ranged.mdx
@@ -4,14 +4,16 @@ author:
   - "Luke Schierer"
 sortOrder: 3
 ---
-{% banner %}
-In the [Overview][], I explain my thinking.  This is a fairly long article, but
-contains a lot of useful background information if you want to understand how I
-arrived at these conclusions. If you just want to be told what to do, you can
-skip it and dive right in here. 
+import Banner from '../../../components/Spectrum/Banner.astro';
 
+<Banner >
+    In the [Overview][], I explain my thinking.  This is a fairly long article, but
+    contains a lot of useful background information if you want to understand how I
+    arrived at these conclusions. If you just want to be told what to do, you can
+    skip it and dive right in here.
+</Banner>
 [Overview]: <overview>
-{% /banner %}
+
 ### For Free to Play Players:
 
 You will be using ranged as your main PVP force.
