--- a/src/content/docs/generals/siege.mdx
+++ b/src/content/docs/generals/siege.mdx
@@ -4,15 +4,16 @@ author:
   - "Luke Schierer"
 sortOrder: 7
 ---
-{% banner %}
-In the [Overview][], I explain my thinking.  This is a fairly long article, but
-contains a lot of useful background information if you want to understand how I
-arrived at these conclusions. If you just want to be told what to do, you can
-skip it and dive right in here. 
+import Banner from '../../../components/Spectrum/Banner.astro';
 
+<Banner >
+    In the [Overview][], I explain my thinking.  This is a fairly long article, but
+    contains a lot of useful background information if you want to understand how I
+    arrived at these conclusions. If you just want to be told what to do, you can
+    skip it and dive right in here.
+</Banner>
 [Overview]: <overview>
-{% /banner %}
-Your Siege generals will be the *last* PvP generals you invest [rune stones][]
+    Your Siege generals will be the *last* PvP generals you invest [rune stones][]
 and [BoA][] on.  This is because siege troops require gems to heal. 
 
 [rune stones]: <../reference/glossary#rune_stones>
@@ -83,7 +84,8 @@ choice as primary general if you are looking to use your siege to reinforce
 others in your alliance.  Not every light spender will have the ability to
 invest in using siege this way, but if you can, having a strong general to lead
 them will be key.  Pair Septimus with either Teach or Suleiman, whichever you
-picked as assistant for your attacking pair.
+picked as assistant for your attacking pair.  Alternately, if Teach is your
+*primary* general, you can use Septimus as the assistant for reinforcing.
 
 [mounted]: <mounted>
 
