--- a/src/content/docs/generals/duty.mdx
+++ b/src/content/docs/generals/duty.mdx
@@ -4,14 +4,15 @@ author:
   - "Luke Schierer"
 sortOrder: 6
 ---
-{% banner %}
+import Banner from '../../../components/Spectrum/Banner.astro';
+
+<Banner>
 In the [Overview][], I explain my thinking.  This is a fairly long article, but
 contains a lot of useful background information if you want to understand how I
 arrived at these conclusions. If you just want to be told what to do, you can
-skip it and dive right in here. 
-
+skip it and dive right in here.
+</Banner>
 [Overview]: <overview>
-{% /banner %}
 ## In General (no pun intended)
 
 As you upgrade your various buildings, many of them allow you to appoint duty
@@ -69,11 +70,11 @@ officers.  This is highly advantageous.  In rough terms, there is either
     * Hospital Capacity Increase (when Hospital Officer):  +25%
     * Healing Speed Increase (when Hospital Officer):  +12%
 
-{% banner %}
+<Banner>
 Some strong players actively dislike having a hospital duty officer, they
 prefer to rely on Source of Life rather than on Hospital Capacity and Healing
 Speed.  There are strong arguments both ways. 
-{% /banner %}
+</Banner>
 
 ### Keep 
 
