--- a/src/content/docs/generals/ground.mdx
+++ b/src/content/docs/generals/ground.mdx
@@ -4,15 +4,15 @@ author:
   - "Luke Schierer"
 sortOrder: 5
 ---
-{% banner type="info" %}
-In the [Overview][], I explain my thinking.  This is a fairly long article, but
-contains a lot of useful background information if you want to understand how I
-arrived at these conclusions. If you just want to be told what to do, you can
-skip it and dive right in here. 
-{% /banner %}
+import Banner from '../../../components/Spectrum/Banner.astro';
 
+<Banner type="info" >
+    In the [Overview][], I explain my thinking.  This is a fairly long article, but
+    contains a lot of useful background information if you want to understand how I
+    arrived at these conclusions. If you just want to be told what to do, you can
+    skip it and dive right in here.
+</Banner>
 [Overview]: <overview.md>
-
 
 ### For Free to Play Players:
 
@@ -50,12 +50,11 @@ skill books between your two generals:
 * March Size
 * March Speed
 
-{% banner header="Specific General Notes" type="warning" %}
-Note that if you use Turenne, or Soult, you _**cannot**_ use the Ground Troop Attack skill book on *either* general.
+<Banner header="Specific General Notes" type="warning" >
+    Note that if you use Turenne, or Soult, you _**cannot**_ use the Ground Troop Attack skill book on *either* general.
 
-Note that if you use Alessandra, she _**must**_ have the March Size Increase Skill Book.
-{% /banner %}
-
+    Note that if you use Alessandra, she _**must**_ have the March Size Increase Skill Book.
+</Banner>
 
 ### For light spenders
 
