sorting order and index links

--- a/src/content/docs/svs/01_prerequisites.mdx
+++ b/src/content/docs/svs/01_prerequisites.mdx
@@ -1,16 +1,18 @@
 ---
 title: 'Prerequisites'
-sortOrder: 1
+author: 'Luke Schierer'
+sidebar:
+  order: 3
 ---
 
 First off there are two types of participation, [minimal][], and active player
 versus player (PvP).  This article is looking at the latter.
 
-[minimal]: <minimal>
+[minimal]: <../minimal>
 
-For now be aware that everything here is somewhat speculative - I am not yet an
-active participant myself in SvS.  I am collecting here the knowledge of those
-who are for when I will be.
+For now be aware that everything here is somewhat speculative - I have just started
+as an active participant myself in SvS.  I am collecting here the knowledge of those
+who are more experienced to augment my own very minimal time in role.
 
 ### Minimums
 
@@ -25,4 +27,4 @@ Measure this by attacking an empty keep and looking at the report.
 Do not [splat][].  This will just annoy the other players on your server. While
 it might generate lots of points, it will not help your server win. 
 
-[splat]: <../reference/glossary#spat>
+[splat]: <../../reference/glossary#spat>
