--- a/src/content/docs/svs/03_next_steps.mdx
+++ b/src/content/docs/svs/03_next_steps.mdx
@@ -1,8 +1,9 @@
 ---
-title: 'A Rough Estimate of Layering'
+title: 'Layer Estimates Before You Start'
 author: 
   - 'Luke Schierer'
-sortOrder: 4
+sidebar:
+  order: 4
 tags: 
   - 'guide'
 ---
