--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -29,8 +29,8 @@ Much of the information here comes from other authors' work on other sites.  In 
 Many thanks to the incredible work put forth by those who have come before me on these sites in documenting Evony TKR.
 
 <CardGrid stagger>
-    <a href="/generals"><Card title="Generals">An opinionated guide to picking the various generals you need.</Card></a>
-    <Card title="SvS">An introductory reference to preparing to participate in the bi-weekly Server versus Server event.</Card>
+    <a href="/generals/"><Card title="Generals">An opinionated guide to picking the various generals you need.</Card></a>
+    <a href="/svs/"><Card title="SvS">An introductory reference to preparing to participate in the bi-weekly Server versus Server event.</Card></a>
     <Card title="Monsters">An introduction to hunting monsters, with a collection of example reports.</Card>
-    <Card title="Reference">Bare-bones reference material to help make sense of the other content.</Card>
+    <a href="/reference/"><Card title="Reference">Bare-bones reference material to help make sense of the other content.</Card></a>
 </CardGrid>
