Changes to be committed: 	modified:   astro.config.ts 	correct site title 	modified:   package.json 	cleaned up dependencies 	deleted:    postcss.config.cjs 	this file was the cause of the sidebar issues 	modified:   src/content/docs/generals/ground.mdx 	correct link 	deleted:    src/content/docs/guides/example.mdx 	remove example 	new file:   src/content/i18n/.gitkeep 	make sure the directory persists.

--- a/src/content/docs/generals/ground.mdx
+++ b/src/content/docs/generals/ground.mdx
@@ -10,7 +10,7 @@ contains a lot of useful background information if you want to understand how I
 arrived at these conclusions. If you just want to be told what to do, you can
 skip it and dive right in here.
 
-[Overview]: <overview>
+[Overview]: <../overview>
 :::
 
 ### For Free to Play Players:
