the table displays but the css is off again

--- a/src/content/docs/generals/mayors.mdx
+++ b/src/content/docs/generals/mayors.mdx
@@ -51,7 +51,7 @@ list and everyone else use the 3 Orange list. Further note, generals marked
 with a 'Y' in the 'Availability' column are the only ones available without
 getting lucky in paid events.
 
-SPTable csv="attack_mayors.csv"
+<SPTable csv="attack_mayors.csv" ></SPTable>
 
 ## Reducing the Enemy's Ability to Survive Your Attack
 
