copied layouts and pages over manually from the astro_v2 branch. modify the rest to link properly. this doesn't _work_, but it is as close as I can come until starlight supports custom layouts or component replacement and possibly both

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -31,6 +31,6 @@ Many thanks to the incredible work put forth by those who have come before me on
 <CardGrid stagger>
     <a href="/generals/"><Card title="Generals">An opinionated guide to picking the various generals you need.</Card></a>
     <a href="/svs/"><Card title="SvS">An introductory reference to preparing to participate in the bi-weekly Server versus Server event.</Card></a>
-    <Card title="Monsters">An introduction to hunting monsters, with a collection of example reports.</Card>
+    <a href="/monsters/"><Card title="Monsters">An introduction to hunting monsters, with a collection of example reports.</Card></a>
     <a href="/reference/"><Card title="Reference">Bare-bones reference material to help make sense of the other content.</Card></a>
 </CardGrid>
