--- a/src/content/docs/monsters/boss_overview.mdx
+++ b/src/content/docs/monsters/boss_overview.mdx
@@ -21,7 +21,7 @@ point, it will be exciting.
 
 [griffin]: <https://www.evonytkrguide.com/bosses/griffin>
 
-[Getting Started]: <getting_started>
+[Getting Started]: <../getting_started/>
 
 ### Next Steps
 
@@ -63,10 +63,10 @@ point, it will be exciting.
    somewhere between 600k and 700k troops in it.  The author has not fully
    explored the limits of t13s.
 
-[ghosting]: <../../reference/glossary#ghosting>
+[ghosting]: <../../reference/glossary/#ghosting>
 
-[buffs]: <../../reference/glossary#buff> 
+[buffs]: <../../reference/glossary/#buff>
 
-[Reports]: <../killing>
+[Reports]: <../reports/>
 
-[march size]: <../../reference/march_size.mdoc>
+[march size]: <../../reference/march_size/>
