--- a/src/content/docs/monsters/getting_started.mdx
+++ b/src/content/docs/monsters/getting_started.mdx
@@ -78,4 +78,4 @@ using mounted troops.  Some tips here.
 
 [roman numerals]: <https://wikipedia.org/wiki/Roman_numerals>
 
-[mg]: <../../generals//mounted>
+[mg]: <../../generals//mounted/>
