--- a/src/content/docs/generals/fifth_books.mdx
+++ b/src/content/docs/generals/fifth_books.mdx
@@ -14,7 +14,7 @@ Siege Ballista
 ## Offensive Books
 Precision Arrows
 Breaker Legions
-Guerilla Cavalry
+Guerrilla Cavalry
 Battering Ballista
 
 ## Wall General Specific
