--- a/src/content/docs/generals/mayors.mdx
+++ b/src/content/docs/generals/mayors.mdx
@@ -1,5 +1,6 @@
 ---
 title: 'Picking Subcity Mayors'
+author: 'Luke Schierer'
 ---
 import GeneralTable from '../../../components/GeneralTable.astro';
 import SPTable from '../../../components/SPTable.astro';
