add the other two tables back in

--- a/src/content/docs/generals/mayors.mdx
+++ b/src/content/docs/generals/mayors.mdx
@@ -67,7 +67,7 @@ list and everyone else use the 3 Orange list. Further note, generals marked
 with a 'Y' in the 'Availability' column are the only ones available without
 getting lucky in paid events.
 
-SPTable csv="toughness_mayors.csv"
+<SPTable csv="toughness_mayors.csv"></SPTable>
 
 ## Trying to find balance
 
@@ -85,6 +85,6 @@ because another use for this list is as a tiebreaker: if you are debating
 between two generals in one of the other lists, knowing where they fall here
 can help make the decision.
 
-SPTable csv="overall_mayors.csv"
+<SPTable csv="overall_mayors.csv"></SPTable>
 
 [Overview]: overview.md
