--- a/src/content/docs/generals/mayors.mdx
+++ b/src/content/docs/generals/mayors.mdx
@@ -2,14 +2,13 @@
 title: 'Picking Subcity Mayors'
 author: 'Luke Schierer'
 ---
-import GeneralTable from '../../../components/GeneralTable.astro';
 import SPTable from '../../../components/SPTable.astro';
 
 :::note
 In the [Overview][], I explain my thinking.  This is a fairly long article, but
 contains a lot of useful background information if you want to understand how I
 arrived at these conclusions. If you just want to be told what to do, you can
-skip it and dive right in here. 
+skip it and dive right in here.
 :::
 
 ## Philosophy
@@ -26,13 +25,13 @@ attack you.
 So which strategy do you prefer?  The best defense is a strong offense? You
 will want to go all out building ranged and particularly sieged troops.  Or do
 you depend on your own PvP march to do the real damage and you just want to
-survive while that happens?  If so focus on ground and mounted troops. 
+survive while that happens?  If so focus on ground and mounted troops.
 
 There are strong arguments each way, and both positions are presented better
 in other places.  Alternately, take a hybrid approach and look for the few
 names that appear on both lists.  These may not be the strongest mayors in one
 or both categories, but that they show in the list at all means they are still
-among the top choices available. 
+among the top choices available.
 
 At this time, I do not recommend the use of peace time mayors for either free
 or light spenders.  I explain why [here][peace].
@@ -45,7 +44,7 @@ or light spenders.  I explain why [here][peace].
 
 This is for people who depend on their PvP march and are just trying to survive
 the enemy's attack in the mean time.  While you would not mind hurting the
-enemy, you are focused on preventing him/her from hurting you. 
+enemy, you are focused on preventing him/her from hurting you.
 
 In the tabs below, see how radically the lists change as you look at different
 levels of investment in your mayors.  I recommend Free Players use the 3 Purple
@@ -53,7 +52,7 @@ list and everyone else use the 3 Orange list. Further note, generals marked
 with a 'Y' in the 'Availability' column are the only ones available without
 getting lucky in paid events.
 
-<GeneralTable name="attack_mayors" ></GeneralTable>
+<SPTable csv="attack_mayors.csv" ></SPTable>
 
 ## Reducing the Enemy's Ability to Survive Your Attack
 
@@ -66,7 +65,7 @@ In the tabs below, see how radically the lists change as you look at different
 levels of investment in your mayors.  I recommend Free Players use the 3 Purple
 list and everyone else use the 3 Orange list. Further note, generals marked
 with a 'Y' in the 'Availability' column are the only ones available without
-getting lucky in paid events. 
+getting lucky in paid events.
 
 <SPTable csv="toughness_mayors.csv"></SPTable>
 
