--- a/src/content/docs/monsters/legacyReports/index.mdx
+++ b/src/content/docs/monsters/legacyReports/index.mdx
@@ -5,6 +5,16 @@ sidebar:
   order: 1
 ---
 
+The reports on the troops, generals and gear needed to kill the various
+monsters in Evony are mostly very dated.  The game has grown very complicated,
+and few of the monster hunting guides have kept up.  Here are some reports that
+attempt to take into account the advantages of assistant generals, ascended
+generals, blazons (minimally accounted for), and in at least some of them, the
+effects of refining gear and spiritual beasts/dragons.  There are so many
+factors involved that each of these is essentially anecdotal, rather than a
+formula to follow to get the same results.
+
+
 import DirectoryList from '../../../../components/DirectoryList.astro'
 
 <DirectoryList />
