--- a/src/content/docs/generals/ranged.mdx
+++ b/src/content/docs/generals/ranged.mdx
@@ -10,7 +10,7 @@ contains a lot of useful background information if you want to understand how I
 arrived at these conclusions. If you just want to be told what to do, you can
 skip it and dive right in here. 
 
-[Overview]: <overview>
+[Overview]: <../overview/>
 :::
 ### For Free to Play Players:
 
@@ -129,4 +129,4 @@ reach keep 35 or 36 and stop ghosting, you are quite likely to like having two
 strong marches for battlefield.   Third, building off of point number one, 
 despite the fact that all but one of these generals has been out for some months,
 Douglas, the newest of them, is the *only* one that I have a copy of, and *no* 
-fragments of.  You will need a strong general in the mean time. 
+fragments of.  You will need a strong general in the meantime.
