--- a/src/content/docs/generals/siege.mdx
+++ b/src/content/docs/generals/siege.mdx
@@ -10,14 +10,14 @@ contains a lot of useful background information if you want to understand how I
 arrived at these conclusions. If you just want to be told what to do, you can
 skip it and dive right in here. 
 
-[Overview]: <overview>
+[Overview]: <../overview/>
 :::
 Your Siege generals will be the *last* PvP generals you invest [rune stones][]
 and [BoA][] on.  This is because siege troops require gems to heal. 
 
-[rune stones]: <../reference/glossary#rune_stones>
+[rune stones]: <../../reference/glossary/#rune_stones>
 
-[BoA]: <../reference/glossary#BoA>
+[BoA]: <../../reference/glossary/#BoA>
 
 ### For Free to Play Players:
 
@@ -35,7 +35,7 @@ For your assistant general, assemble Suleiman the Magnificent from fragments
 from relics.  He makes one of the best assistant generals for siege troops even
 if you do have a premium general, and he pairs with all of these options. 
 
-[ascended]: <../reference/glossary#ascend>
+[ascended]: <../../reference/glossary/#ascend>
 
 ### For Light Spenders
 
@@ -85,17 +85,17 @@ invest in using siege this way, but if you can, having a strong general to lead
 them will be key.  Pair Septimus with either Teach or Suleiman, whichever you
 picked as assistant for your attacking pair.
 
-[mounted]: <mounted>
+[mounted]: <../mounted/>
 
-[wall]: <wall>
+[wall]: <../wall/>
 
-[ground]: <ground>
+[ground]: <../ground/>
 
-[ranged]: <ranged>
+[ranged]: <../ranged/>
 
-[ascend]: <../reference/glossary#ascend>
+[ascend]: <../../reference/glossary/#ascend>
 
-[BoC]: <../reference/glossary#BoC>
+[BoC]: <../../reference/glossary/#BoC>
 
-[BoG]: <../reference/glossary#BoG>
+[BoG]: <../../reference/glossary/#BoG>
 
