--- a/src/content/docs/generals/wall.mdx
+++ b/src/content/docs/generals/wall.mdx
@@ -24,7 +24,7 @@ resources you need to do other things.
 
 Eventually however you are ready to grow beyond [ghosting][] and to do that,
 you need to have a good set of wall generals.  Moreover, you need to have them
-fairly well developed already, not brand new.
+fairly well-developed already, not brand new.
 
 George Dewey is available in the General's Chest in the Tavern.  He is
 unquestionably the best main wall defense general available for those who do
@@ -35,8 +35,10 @@ fragments.[^230107-2]
 Looking at your troops in your Rally Spot, mentally subtract out your main PvP
 march. You want to think about what is left when that is out attacking someone.
 
-* If the remainder is mostly mounted troops, pick Queen Boudica for your assistant wall general.
-* If the remainder is mostly ground troops, pick Robert the Bruce as your assistant wall general.
+* If the remainder is mostly mounted troops, pick Queen Boudica for your
+  assistant wall general.
+* If the remainder is mostly ground troops, pick Robert the Bruce as your
+  assistant wall general.
 * If the remainder is mostly ranged or siege class troops, look at what is the
   next most numerous type.
   * If the next most numerous type is ground, pick between Robert the Bruce and
@@ -61,10 +63,10 @@ If you see any of the following, they are superior choices for assistants availa
 
 [ascending]: <https://www.evonyanswers.com/post/evony-ascending-enhancement-awakened-upgrades>
 
-[ranged]: <ranged>
+[ranged]: <../ranged/>
 
-[Overview]: <overview.md>
+[Overview]: <../overview/>
 
-[mounted]: <mounted>
+[mounted]: <../mounted/>
 
 [ghosting]: <https://www.evonytkrguide.com/guides/evony-tkr-guide-to-ghosting-troops>
