--- a/src/content/docs/reference/march_size.mdx
+++ b/src/content/docs/reference/march_size.mdx
@@ -10,9 +10,9 @@ A break down on where your march size comes from.  Many thanks to [EvonyGuideWik
 
 This is your base march size.
 
-{% banner type="info" %}
+:::note
 Any section using percentages below are based this base size.
-{% /banner %}
+:::
 
 
 * Lv1 – 800
@@ -162,9 +162,9 @@ the reality has more gradations than this shows.
 * Matthias I +5%
 * George A. Custer +10%
 
-{% banner type="info" %}
+:::note
 Some generals have a further increase when [ascended][], or from [specialties][].
-{% /banner %}
+:::
 
 ## Skill Book
 
@@ -254,13 +254,15 @@ Unlock and upgrade the “Imperial Seal”.
 * Medium March Size Increase : +100% for 1 hour
 * Senior March Size Increase : +200% for 1 hour
 
-[ascended]: <glossary#ascending>
+[ascended]: <../glossary/#ascending>
 
-[specialties]: <glossary#specialties>
+[specialties]: <../glossary/#specialties>
 
 [^230127-1]: [EvonyGuideWiki][]. Two articles:
-* "[12 ways to increase March Size](https://evonyguidewiki.com/en/how-to-increase-march-size-en/)" Posted 2020-10-11. Updated: 2022-11-24.
-* "[Maximum march size by keep level](https://evonyguidewiki.com/en/march-size-per-level-en/)" Posted: 2022-02-02. Updated: 2022-03-31.
+    * "[12 ways to increase March Size](https://evonyguidewiki.com/en/how-to-increase-march-size-en/)"
+       Posted 2020-10-11. Updated: 2022-11-24.
+    * "[Maximum march size by keep level](https://evonyguidewiki.com/en/march-size-per-level-en/)"
+       Posted: 2022-02-02. Updated: 2022-03-31.
 
 [EvonyGuideWiki]: <https://evonyguidewiki.com/en/index-en/>
 
