--- a/src/content/docs/svs/03_next_steps.mdx
+++ b/src/content/docs/svs/03_next_steps.mdx
@@ -143,7 +143,7 @@ other troop types to keep your siege alive.  If you are being attacked *by*
 siege, then your only two options are to dodge the attack (port away) or to
 have more siege and more range than your attacker.  Refer back to the [T1 Defense][] for more on this.
 
-[T1 Defense]: <t1_defense>
+[T1 Defense]: <../t1_defense/>
 
 ### for your wall general
 
