--- a/src/content/docs/svs/index.mdx
+++ b/src/content/docs/svs/index.mdx
@@ -2,12 +2,14 @@
 title: "Svs" 
 author: 
   - "Luke Schierer"
+sidebar:
+  order: 1
 --- 
 
 The pages in this section will attempt to provide what advice I can about
 participating in [SvS][] on a budget.  Much of this advice is under-tested, or
 even un-tested, as I am still just starting my own SvS journey in many ways.  If
-you will allow a mixed metaphor, Take anything you find here with a grain of
+you allow a mixed metaphor, Take anything you find here with a grain of
 salt, because your mileage may vary. 
 
-[SVS]: <../reference/glossary/#SvS>
+[SVS]: <../../reference/glossary/#SvS>
