--- a/src/content/docs/generals/duty.mdx
+++ b/src/content/docs/generals/duty.mdx
@@ -10,7 +10,7 @@ contains a lot of useful background information if you want to understand how I
 arrived at these conclusions. If you just want to be told what to do, you can
 skip it and dive right in here. 
 
-[Overview]: <overview>
+[Overview]: <../overview>
 :::
 ## In General (no pun intended)
 
@@ -260,7 +260,7 @@ Speed.  There are strong arguments both ways.
     * March Size Increase (when Rally Spot Officer):  +9%
 
 
-[debuffs]: <../reference/glossary#debuff>
+[debuffs]: <../../reference/glossary#debuff>
 
-[buffs]: <../reference/glossary#buff>
+[buffs]: <../../reference/glossary#buff>
 
