--- a/src/content/docs/generals/mayors.mdx
+++ b/src/content/docs/generals/mayors.mdx
@@ -36,9 +36,9 @@ among the top choices available.
 At this time, I do not recommend the use of peace time mayors for either free
 or light spenders.  I explain why [here][peace].
 
-[peace]: peace_time_subcity_mayors
+[peace]: <../peace_time_subcity_mayors/>
 
-[debuff]: ../reference/glossary#debuff
+[debuff]: <../../reference/glossary/#debuff>
 
 ## Reducing the Enemy's Ability to Attack You
 
