--- a/src/content/docs/generals/misc.mdx
+++ b/src/content/docs/generals/misc.mdx
@@ -5,16 +5,16 @@ author:
 sortOrder: 9
 ---
 
+:::note
 In the [Overview][], I explain my thinking.  This is a fairly long article, but
 contains a lot of useful background information if you want to understand how I
 arrived at these conclusions. If you just want to be told what to do, you can
 skip it and dive right in here. 
 
-[Overview]: <overview>
-
+[Overview]: <../overview/>
+:::
 Interestingly, this advice applies almost equally well to both free players and
-light spenders.  The only exception is Theodora, who is only available as a
-reward for reaching a fairly low spending goal.
+light spenders.
 
 While you can get lucky, you are best off waiting until your tavern is at level
 27, or even better, at level 30, before you invest significant gems refreshing
@@ -34,12 +34,14 @@ When you go into the tavern to start refreshing like crazy, you are looking for
 several different things.
 1. [Mayors][] for your sub cities.
 1. Extra copies of generals you picked in other sections of this guide.
-1. Copies of Queen Jindock.  You want 5 copies to use, and maybe a few
+1. Copies of Queen Jindock.  You want *five* copies to use, and maybe a few
    spare for fragments that you will someday use.  You will use her for
    gathering [RSS][] from tiles.
-1. Copies of Baibars.  You want at least 4 copies to use, though like Queen
-   Jindock, if you see extra copies grab them for fragments.  Someday you may
-   want fragments.  If you do not have Theodora, consider getting 5 copies to use.
+1. Copies of Theodora You want at least *four* copies, and no more than your number
+   of marches. Do not bother ascending this general.
+1. Copies of Baibars.  Take the number of marches you have, and subtract
+   from this the number of copies of Theodora you  have.  The result is
+   the number of Baibars you should have.
 1. If you see Amir Timur, having *one* copy of him to send to relics can be
    useful.  Load is the *only* statistic that matters for relics.  The higher
    your load, the more you bring home.  Nothing else matters.  You can
@@ -52,15 +54,15 @@ several different things.
    not listed somewhere in these recommendation pages, you are going to keep
    them just long enough to restart the game, and then sell them.  Restarting
    the game seems to ensure that the credit for having the general persists.
-   Otherwise occasionally the game will forget that you had the general.  Yes
+   Otherwise, occasionally the game will forget that you had the general.  Yes
    this is a bug, and restarting should not be necessary.  Yes buying and
    selling a general seems like a waste of gold, however the things that
    activating your general's hall unlocks is worth the cost.
 
-[Duty]: <duty.mdoc>
+[Duty]: <../duty/>
 
-[General's Hall]: <../reference/glossary#Generals_Hall>
+[General's Hall]: <../../reference/glossary/#Generals_Hall>
 
-[RSS]: <../reference/glossary#RSS>
+[RSS]: <../../reference/glossary/#RSS>
 
-[Mayors]: <mayors>
+[Mayors]: <../mayors/>
