--- a/src/content/docs/generals/mounted.mdx
+++ b/src/content/docs/generals/mounted.mdx
@@ -10,7 +10,7 @@ contains a lot of useful background information if you want to understand how I
 arrived at these conclusions. If you just want to be told what to do, you can
 skip it and dive right in here. 
 
-[Overview]: <overview>
+[Overview]: <../overview/>
 
 ## For Free to Play Players:
 
@@ -29,9 +29,10 @@ PvP and monsters.  Give him the following Skill Books:
 * Key your eyes open during events you can win generals for
   * Zhao Yun 
   * Sun Ce
-  * we are considering replacing Li Jing because combinations with
-    him cannot use the Mounted Attack skill book.  If we replace him, you can
-    reconfigure your Roland to use the following:
+  * Laudon
+  * we are replacing Li Jing because combinations with him cannot use the
+    Mounted Attack skill book.  If we replace him, you can reconfigure
+    your Roland to use the following:
     * Mounted Attack
     * Mounted Defense or Mounted HP (does not matter which)
     * March Size
@@ -43,16 +44,17 @@ give him a dragon.  Since you won't have two dragons until level 30, I dislike
 this approach.  Roland is useful far sooner, and saves your (red) Celtic dragon
 for your [ranged][] march.
 
-[ranged]: <ranged.mdoc>
+[ranged]: <../ranged/>
 
 ### For PvP Assistant:
 * As a FTP or light spending player, I strongly recommend that Mounted not
   be your main PvP force, there are no good options for PvP in the FTP
   range.
 * Keep your eyes open during events you can win generals for
-  * Maximilian I 
+  * Maximilian I
+  * Laudon
   * Zhao Yun 
-  * Sun Ce 
+  * Sun Ce
   * If you win one of these Give them the following
     skill books.
     * March Speed
@@ -78,8 +80,8 @@ fast, but it is still a highly respectable pair.
 * luck
 * either Mounted defense or mounted HP (does not strongly matter which)
 
-As you spend more, consider replacing Theodora with Custer.  You will now be
-ready for really big monsters.  As you make this transition, you may want to
+As you spend more, consider replacing Theodora with George A. Custer.  You will
+now be ready for really big monsters.  As you make this transition, you will want to
 use the following skill book configuration on Custer:
 * March size
 * Mounted Defense
@@ -96,7 +98,8 @@ Send her with a single troop when you join rallies.  This maximizes your double
 drop chances even better than Baibars. 
 
 ### Player versus Player (PvP) 
-For Mounted PvP, use Roland.  See the advice given to FTP players, however, be
-sure to reconfigure your Roland to use the Mounted Attack skill book as soon as
-you stop using Li Jing.
-
+For Mounted PvP, use Roland.  There are a number of really fancy mounted generals
+available, however, mounted troops are not the best choice for PvP.  You are better off
+using Roland here, and saving up for premium generals in other classes.  See the advice
+given to FTP players, however, be sure to reconfigure your Roland to use the Mounted
+Attack skill book as soon as you stop using Li Jing.
