--- a/src/content/docs/svs/02_t1_defense.mdx
+++ b/src/content/docs/svs/02_t1_defense.mdx
@@ -3,7 +3,8 @@ title: 'The T1 Defense'
 author:
   - 'Luke Schierer' 
   - 'Redwood'
-sortOrder: 3
+sidebar:
+  order: 3
 --- 
  
 This article leans heavily on a set of king's mails that another
@@ -179,9 +180,7 @@ on mounted attack, each with a value of 950 or better.  This will give your
 meat shield the best ability to hit back. If you are ghosting everything else,
 this attack *is* the bulk of your counter-attack, so that is important.
 
-[wall]: <../generals/wall.mdoc>
-
-Regardless of whether or not you are ghosting everything else, it is important 
+Regardless of whether or not you are ghosting everything else, it is important
 that your meat shield *survive*.  To do that, attack does not actually matter.  
 Defense and HP do.
 
@@ -227,5 +226,7 @@ You focus on t11 and t12 siege, and t12 archers for your defense.
     incoming attack within a few rounds of any given engagement (the inner unseen 
     mechanics that constitute a single report).
 
-[next]: <next_steps>
+[next]: <../next_steps/>
+
+[wall]: <../../generals/wall/>
 
