a start towards the detailed display of generals

--- a/src/content/docs/monsters/reports/test.mdx
+++ b/src/content/docs/monsters/reports/test.mdx
@@ -2,10 +2,7 @@
 title: test report
 author: Luke Schierer
 ---
-import Excalibur from '../../../../components/ArtTreasure.astro'
-import BlazonSet from "../../../../components/BlazonSet.astro";
+import General from "../../../../components/General.astro";
 
-<BlazonSet setId="set20231014" />
-
-<Excalibur artId="excalibur_l3"/>
+<General generalEntry="Pyrrhus" />
 
