a general detail component more or less works

--- a/src/content/docs/reference/test.mdx
+++ b/src/content/docs/reference/test.mdx
@@ -1,6 +1,8 @@
 ---
 title: test report
 author: Luke Schierer
+sidebar:
+  hidden: true
 ---
 import General from "../../../components/General.astro";
 
