doing so revealed some flaws, notably I only scored specialities

--- a/src/content/docs/reference/test.mdx
+++ b/src/content/docs/reference/test.mdx
@@ -6,5 +6,5 @@ sidebar:
 ---
 import General from "../../../components/General.astro";
 
-<General generalEntry="Pyrrhus" />
+<General generalEntry="Aurelian" />
 
