successfully displaying name and attack values for both generals and sorting on them

--- a/src/content/docs/reference/test.mdx
+++ b/src/content/docs/reference/test.mdx
@@ -4,6 +4,10 @@ author: Luke Schierer
 sidebar:
   hidden: true
 ---
+import Comparing from "../../../components/general/Comparing.astro"
+
+<Comparing />
+
 import General from "../../../components/General.astro";
 
 <General generalEntry="Pyrrhus" />
