--- a/src/content/docs/reference/test.mdx
+++ b/src/content/docs/reference/test.mdx
@@ -10,5 +10,5 @@ import Comparing from "../../../components/general/Comparing.astro"
 
 import General from "../../../components/General.astro";
 
-<General generalEntry="Pyrrhus" />
+<General generalEntry="Aurelian" />
 
