--- a/src/content/docs/reference/test.mdx
+++ b/src/content/docs/reference/test.mdx
@@ -12,3 +12,6 @@ import General from "../../../components/General.astro";
 
 <General generalEntry="Aurelian" />
 
+<General generalEntry="Pyrrhus" />
+
+
