--- a/src/content/docs/reference/test.mdx
+++ b/src/content/docs/reference/test.mdx
@@ -10,7 +10,7 @@ import Comparing from "../../../components/general/Comparing.astro"
 
 import General from "../../../components/General.astro";
 
-<General generalEntry="Zhao_Yun" />
+<General generalEntry="Roland" />
 
 <General generalEntry="Pyrrhus" />
 
