--- a/src/content/docs/svs/03_next_steps.mdx
+++ b/src/content/docs/svs/03_next_steps.mdx
@@ -1,10 +1,10 @@
 ---
 title: 'Layer Estimates Before You Start'
-author: 
+author:
   - 'Luke Schierer'
 sidebar:
   order: 4
-tags: 
+tags:
   - 'guide'
 ---
 
@@ -12,7 +12,7 @@ The following is based on the recommendations of bigger players, I have not test
 
 ## Troops
 
-### t1s 
+### t1s
 
 * 80,000,000 mounted
 * 1,000,000 ground
@@ -21,24 +21,24 @@ The following is based on the recommendations of bigger players, I have not test
 
 Your mounted troops should survive well against both a ground march and a
 ranged march.  It should not do *badly* against a mounted march.  A siege
-attack will bypass your t1s no matter the type. 
+attack will bypass your t1s no matter the type.
 
-Over build the mounted type so that you can withstand several hits. 
+Over build the mounted type so that you can withstand several hits.
 
-### t2s 
+### t2s
 
 * 1,000,000 mounted
 * 1,000,000 ground
 * 200,000 ranged
 * 200,000 siege
 
-Try to increase that mounted count to 20,000,000 over time. Basically this is your buffer in case someone gets through your t1s. 
+Try to increase that mounted count to 20,000,000 over time. Basically this is your buffer in case someone gets through your t1s.
 
 ### t3 through t9 (each)
 
 #### before reaching keep size 30
 
-* 50,000 mounted 
+* 50,000 mounted
 * 50,000 ground
 * 50,000 ranged
 * 50,000 siege
@@ -78,7 +78,7 @@ Try to increase that mounted count to 20,000,000 over time. Basically this is yo
 * If you are, continue to follow the guidance above for keeps smaller than size 33.
   * you will be severely limited in what you can hunt
   * you may be limited in the size of your attack march
-  * you may have to consider using mounted as your primary attack troop type even for PvP. 
+  * you may have to consider using mounted as your primary attack troop type even for PvP.
 * slowly and carefully build more siege while remaining ghostable. Some day you will want 4,000,000 t11 siege.
 
 #### after keep size 33, but not ghosting
@@ -87,8 +87,8 @@ Try to increase that mounted count to 20,000,000 over time. Basically this is yo
 * 1,000,000 ground
 * 1,000,000 mounted
 * 1,000,000 ranged *over and above what you need to attack with*
-* increase your t11 sieged to 4,000,000 over time 
-* You may need to start bubbling more until you reach a stable point, test your defenses in battlefield regularly. 
+* increase your t11 sieged to 4,000,000 over time
+* You may need to start bubbling more until you reach a stable point, test your defenses in battlefield regularly.
 
 ### t12s
 
@@ -105,7 +105,7 @@ Try to increase that mounted count to 20,000,000 over time. Basically this is yo
 * 500,000 ground
 * 3,000,000 ranged *over and above what you need to attack with*
 * 1,000,000 siege
-* you may be ghosting only your t11s and above. 
+* you may be ghosting only your t11s and above.
 
 #### after keep size 33, but not ghosting
 
@@ -113,7 +113,7 @@ Try to increase that mounted count to 20,000,000 over time. Basically this is yo
 * 1,000,000 ground
 * 5,000,000 ranged *over and above what you need to attack with*
 * 1,500,000 siege
-* increase your t12 siege slowly over time to 2,000,000, try to keep a steady ratio between t11s and t12s. 
+* increase your t12 siege slowly over time to 2,000,000, try to keep a steady ratio between t11s and t12s.
 
 ### t13s
 
@@ -124,13 +124,13 @@ Try to increase that mounted count to 20,000,000 over time. Basically this is yo
 * 1,000,000 ranged
 * 1,000,000 siege
 * increase your *mounted* while remaining ghostable, to 2,000,000
-* you will be ghosting only your t11s and above. 
+* you will be ghosting only your t11s and above.
 
 #### not ghosting
 
 * 2,000,000 mounted
 * 1,000,000 ground
-* 1,000,000 ranged *over and above what you need to attack with* 
+* 1,000,000 ranged *over and above what you need to attack with*
 * 1,000,000 siege
 
 ## equipment refines
@@ -143,11 +143,11 @@ other troop types to keep your siege alive.  If you are being attacked *by*
 siege, then your only two options are to dodge the attack (port away) or to
 have more siege and more range than your attacker.  Refer back to the [T1 Defense][] for more on this.
 
-[T1 Defense]: <../t1_defense/>
+[T1 Defense]: <../02_t1_defense/>
 
 ### for your wall general
 
-* 950+ mounted attack 
+* 950+ mounted attack
   * x4 wall general's ax
   * x3 at least 3 subcities's ring
 * 450+ ground attack
@@ -156,16 +156,16 @@ have more siege and more range than your attacker.  Refer back to the [T1 Defens
   * 2x on his boots
   * 2x on his armor
   * you can do 4x on one piece here and 4x on the other piece in the next section.
-* 1450+ ground defense 
+* 1450+ ground defense
   * 2x on his boots
-  * 2x on his armor  
+  * 2x on his armor
   * you can do 4x on one piece here and 4x on the other piece in the previous section.
   * You may choose to devote anywhere between six and eight lines (four for the boots, four for the armor) to mounted instead of four and four.
 * 1700+ mounted HP
   * 2x on his helmet
   * 2x on his leg armor
   * you can do 4x on one piece here and 4x on the other piece in the previous section.
-* 2400+ ground HP 
+* 2400+ ground HP
   * 2x on his helmet
   * 2x on his leg armor
   * you can do 4x on one piece here and 4x on the other piece in the previous section.
