this is the brute force approach showing pairs that won't actually work in the game due to skill book conflicts

--- a/src/content/docs/reference/test.mdx
+++ b/src/content/docs/reference/test.mdx
@@ -5,8 +5,13 @@ sidebar:
   hidden: true
 ---
 import Comparing from "../../../components/general/Comparing.astro"
+import Pairing from "../../../components/general/Pairing.astro"
 
 <Comparing />
+
+<br/><hr/><br/>
+
+<Pairing />
 
 import General from "../../../components/General.astro";
 
