the page looks better without the toc

--- a/src/content/docs/reference/test.mdx
+++ b/src/content/docs/reference/test.mdx
@@ -3,6 +3,7 @@ title: test report
 author: Luke Schierer
 sidebar:
   hidden: true
+tableOfContents: false
 ---
 import Comparing from "../../../components/general/Comparing.astro"
 import Pairing from "../../../components/general/Pairing.astro"
