where in the sidebar sort order

--- a/src/content/docs/generals/pair_picking.mdx
+++ b/src/content/docs/generals/pair_picking.mdx
@@ -1,7 +1,9 @@
 ---
 title: Evaluating Relative Strength of Pairs
-author: Luke Schierer
+authors: Luke Schierer
 tableOfContents: false
+sidebar:
+  order: 3
 ---
 import CollapsibleSection from "../../../components/CollapsibleSection.astro"
 import Pairing from "../../../components/general/Pairing.astro"
