--- a/src/content/docs/generals/details/Maeda_Toshiie.mdx
+++ b/src/content/docs/generals/details/Maeda_Toshiie.mdx
@@ -1,7 +1,7 @@
 ---
-title: Zucca
+title: Maeda Toshiie
 tableOfContents: false
 ---
 import General from "../../../../components/General.astro"
  
-<General generalEntry='Zucca'/>
+<General generalEntry='Maeda_Toshiie'/>
