--- a/src/content/docs/generals/details/Aethelflaed.mdx
+++ b/src/content/docs/generals/details/Aethelflaed.mdx
@@ -1,6 +1,7 @@
 ---
 title: Aethelflaed
+tableOfContents: false
 ---
 import General from "../../../../components/General.astro"
-
-<General generalEntry="Aethelflaed"/>
+ 
+<General generalEntry='Aethelflaed'/>
