--- a/src/content/docs/generals/details/Gaius_Octavius.mdx
+++ b/src/content/docs/generals/details/Gaius_Octavius.mdx
@@ -1,7 +1,7 @@
 ---
-title: Zucca
+title: Gaius Octavius
 tableOfContents: false
 ---
 import General from "../../../../components/General.astro"
  
-<General generalEntry='Zucca'/>
+<General generalEntry='Gaius_Octavius'/>
