--- a/src/content/docs/generals/details/George_A_Custer.mdx
+++ b/src/content/docs/generals/details/George_A_Custer.mdx
@@ -1,7 +1,7 @@
 ---
-title: Zucca
+title: George A. Custer
 tableOfContents: false
 ---
 import General from "../../../../components/General.astro"
  
-<General generalEntry='Zucca'/>
+<General generalEntry='George_A_Custer'/>
