--- a/src/content/docs/generals/details/Laudon.mdx
+++ b/src/content/docs/generals/details/Laudon.mdx
@@ -1,6 +1,7 @@
 ---
 title: Laudon
+tableOfContents: false
 ---
 import General from "../../../../components/General.astro"
-
-<General generalEntry="Laudon"/>
+ 
+<General generalEntry='Laudon'/>
