--- a/src/content/docs/generals/details/Pyrrhus.mdx
+++ b/src/content/docs/generals/details/Pyrrhus.mdx
@@ -1,7 +1,7 @@
 ---
-title: Zucca
+title: Pyrrhus
 tableOfContents: false
 ---
 import General from "../../../../components/General.astro"
  
-<General generalEntry='Zucca'/>
+<General generalEntry='Pyrrhus'/>
