--- a/src/content/docs/generals/details/Raimondo.mdx
+++ b/src/content/docs/generals/details/Raimondo.mdx
@@ -1,6 +1,7 @@
 ---
 title: Raimondo
+tableOfContents: false
 ---
 import General from "../../../../components/General.astro"
-
-<General generalEntry="Raimondo"/>
+ 
+<General generalEntry='Raimondo'/>
