--- a/src/content/docs/generals/details/Suleiman_the_Magnificent.mdx
+++ b/src/content/docs/generals/details/Suleiman_the_Magnificent.mdx
@@ -1,6 +1,7 @@
 ---
 title: Suleiman the Magnificent
+tableOfContents: false
 ---
 import General from "../../../../components/General.astro"
-
-<General generalEntry="Suleiman"/>
+ 
+<General generalEntry='Suleiman_the_Magnificent'/>
