--- a/src/content/docs/generals/details/Zhao_Yun.mdx
+++ b/src/content/docs/generals/details/Zhao_Yun.mdx
@@ -1,7 +1,7 @@
 ---
-title: Zucca
+title: Zhao Yun
 tableOfContents: false
 ---
 import General from "../../../../components/General.astro"
  
-<General generalEntry='Zucca'/>
+<General generalEntry='Zhao_Yun'/>
