intrinsic attributes complete

--- a/src/content/docs/reference/test.mdx
+++ b/src/content/docs/reference/test.mdx
@@ -5,9 +5,6 @@ sidebar:
   hidden: true
 tableOfContents: false
 ---
-import Pairing from "../../../components/general/pairing/Pairing.astro"
+import GeneralYaml from '../../../components/general/GeneralYaml.astro'
 
-<Pairing />
-
-
-
+<GeneralYaml />
