pass the link validation

--- a/src/content/docs/reference/glossary.mdx
+++ b/src/content/docs/reference/glossary.mdx
@@ -13,7 +13,7 @@ those I use.
         general's star count above 5. Stars 6-10 will show as red stars.</dd>
 
     <dt><a name="BoC"></a>Battle of Constantinople</dt>
-    <dd>A [PvP event happening on many Saturdays. The event will run for
+    <dd>A [PvP] event happening on many Saturdays. The event will run for
         1-5 Saturdays in a row, followed by several weeks of one of several
         different championship or all-stars events.</dd>
 
@@ -25,7 +25,7 @@ those I use.
     <dt><a name="BoA">Blood of Ares</a></dt>
     <dd>An item required to [ascend] a general.</dd>
 
-    <dt><a name="buble">bubble</a></dt>
+    <dt><a name="bubble">bubble</a></dt>
     <dd>The game calls these 'Truce Agreements'. They look like semi-circular domes over your keep and protect you from attack.</dd>
 
     <dt><a name="buff">buff</a></dt>
@@ -64,8 +64,8 @@ those I use.
 
 </dl>
 
-[specialty]: <#specialties>
+[specialty]: <../glossary/#specialties>
 
-[PvP]: <#PvP>
+[PvP]: <../glossary/#PvP>
 
-[ascend]: <#ascending>
+[ascend]: <../glossary/#ascending>
