--- a/src/content/docs/generals/pair_picking.mdx
+++ b/src/content/docs/generals/pair_picking.mdx
@@ -33,9 +33,17 @@ import Pairing from "../../../components/general/pairing/Pairing.astro"
         currently has a very small set of generals.   I hope to expand that
         over time.
     </p>
+    <p>
+        Don't see the general you want to compare?  Go to the [General Yaml Creator]
+        and fill in the values.  You can submit it to me any time the box on the right
+        is green, but the more information you provide, the less I have to find before 
+        I can post it.
+    </p>
 </CollapsibleSection>
 <br/>
 
 <Pairing />
 
 [EvonyAnswers]: https://www.evonyanswers.com/
+
+[General Yaml Creator]: <../../reference/generalyaml/>
