minor tweaks based on problems observed

--- a/src/content/docs/generals/ranged.mdx
+++ b/src/content/docs/generals/ranged.mdx
@@ -43,14 +43,14 @@ your main PVP march.
 
 Keep your eye out for any of the following (this is a ordered list)
 
-* Charles XII Eleanor (254)
-* Douglas [D S] (253)
-* Charles XII (250)
-* James Conrad (247)
-* Princess Kaguya (228)
-* Mason Weaver [D S] (216)
-* Douglas [ND S] (208)
-* Alfred the Great (198)
+* Charles XII 
+* Eleanor 
+* Douglas [D S] 
+* Charles XII 
+* James Conrad 
+* Princess Kaguya 
+* Douglas [ND S] 
+* Alfred the Great 
 
 These are all available for paying players. Particularly, Alfred is available
 in the Alliance Shop if you buy the Alliance Shop card.  Once you have invested
